--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+    <meta property="og:title" content="Bakchod Company - Payment for no reason" />
+    <meta property="og:description" content="Bakchod.company is an experiment at a social and human level. It encourages spending money for nothing in return." />
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="Bakchod Company - Payment for no reason">
+    <meta property="twitter:description" content="Bakchod.company is an experiment at a social and human level. It encourages spending money for nothing in return.">
+
+    <meta name="theme-color" content="#000000" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.png">
+    <title>Bakchod Company - Payment for no reason</title>
+    <script>
+      (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+      ga('create', 'UA-211770834-1', 'auto');
+    </script>
+    %svelte.head%
+  </head>
 	<body>
-		<div>%svelte.body%</div>
+	%svelte.body%
 	</body>
 </html>
